Adding endorsements to homepage

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -94,6 +94,7 @@ textarea
   color: $title-blue
   font-size: 40px
   font-weight: $font-weight-strong
+
 .navbar .navbar-link
   color: $black
   font-size: 18px
@@ -342,7 +343,7 @@ a.navbar-link
 .anchor
   position: relative
   display: block
-  top: -230px
+  top: -210px
 
 .button--primary
   @extend %transition
@@ -465,6 +466,21 @@ a.navbar-link
   font-weight: 400
   display: inline
   color: $lightgray
+
+
+// Endorsements
+
+.endorsement_container
+  text-align: center
+  margin-bottom: 40px
+
+.endorsement_bug
+  max-height: 80px
+  max-width: 180px
+  margin: 10px 30px
+  @media only screen and (max-width: 768px)
+    margin: 10px
+
 
 
 
