--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -524,4 +524,23 @@ a.navbar-link
       color: $white
 
 .button--primary
-  
+
+.video-container-container
+  @media only screen and (min-width: 768px)
+    display: block
+    margin: 0 auto
+    width: 720px
+
+.video-container
+    position: relative
+    padding-bottom: 56.25%
+    display: block
+    height: 0
+    margin-bottom: 20px
+
+.video-container iframe
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
