--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -59,6 +59,12 @@ textarea
 .btn
   background-color: green
 
+
+// hero image
+.picture
+  @media only screen and (max-width: 767px)
+    margin-top: 40px
+
 // for specificity
 #navbar
   min-height: 5rem
@@ -133,6 +139,20 @@ textarea
     right: 2rem
   @media only screen and (max-width: 767px)
     right: 10px
+
+.resources_alert
+  position: fixed
+  padding: 5px
+  width: 100%
+  top: 133px
+  text-align: center
+  text-transform: uppercase
+  font-weight: bold
+  letter-spacing: .5px
+  background: $crimson
+  color: $paper
+  @media only screen and (max-width: 767px)
+    top: 80px
 
 
 
@@ -279,8 +299,10 @@ p
   margin-left: auto
   margin-right: auto
   font-weight: 600
+  margin-top: 20px
   @media only screen and (max-width: 768px)
     font-size: 2.5rem !important
+    margin-top: 50px
 
 .navbar-start
   margin-right: 0
@@ -319,7 +341,7 @@ a.navbar-link
   font-weight: 800
   font-size: 16px
   position: sticky
-  top: 130px
+  top: 171px
   background: $paper
   @media only screen and (max-width: 785px)
    display: none
@@ -481,6 +503,16 @@ a.navbar-link
   @media only screen and (max-width: 768px)
     margin: 10px
 
+
+// Resources Page
+
+.resource_content
+  max-width: 820px
+  margin: 0 auto 20px
+
+.resource_header
+  font-size: 1.4rem
+  font-weight: bold
 
 
 
