Formatting changes to COVID resources

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -283,7 +283,8 @@ body
 // customization of bulma class
 
 p
-  margin-bottom: 1rem !important
+  margin-bottom: .7rem !important
+  line-height: 1.7rem
 
 
 .title
