--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -124,6 +124,9 @@ textarea
           color: $sky-blue
           border-bottom: 3px solid $black
 
+.navbar-link:not(.is-arrowless)
+  padding-right: 1.5rem !important
+
 .register-vote
   border-radius: .25rem
   padding: .3rem 1rem
@@ -284,7 +287,7 @@ body
 
 p
   margin-bottom: .7rem !important
-  line-height: 1.7rem
+  line-height: 1.9rem
 
 
 .title
