minor styling fixes

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -395,6 +395,10 @@ a.navbar-link
 
 // Homepage
 
+.header_para
+  font-size: 1.7rem
+  margin-bottom: 20px
+
 .intro_para
   max-width: 820px
   font-size: 1.4rem
