--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -521,9 +521,10 @@ a.navbar-link
   max-width: 820px
   margin: 0 auto 20px
 
-.resource_header
+.resource_header, .resource_content h1
   font-size: 1.4rem
   font-weight: bold
+  margin-top: 20px
 
 
 
