--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -525,7 +525,13 @@ a.navbar-link
   font-size: 1.4rem
   font-weight: bold
   margin-top: 20px
+  margin-bottom: 5px
 
+.resource_content ul
+  list-style: disc
+  
+.resource_content li
+  padding-bottom: 5px
 
 
 // Donate module
