Adding list functionality to issues

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -283,6 +283,10 @@ body
     display: block
     margin: 3rem auto 1rem auto
 
+.issue-list-item
+    padding-bottom: 7px
+.issue-list-span
+    font-weight: 700
 // customization of bulma class
 
 p
