Adding phonebank button

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -127,21 +127,25 @@ textarea
 .navbar-link:not(.is-arrowless)
   padding-right: 1.5rem !important
 
-.register-vote
-  border-radius: .25rem
-  padding: .3rem 1rem
-  cursor: pointer
-  background-color: #73308b
-  text-transform: uppercase
-  color: white
-  font-weight: bold
-  font-size: .9rem
+.nav-buttons
   position: absolute
   top: 5.75rem
   @media only screen and (min-width: 768px)
     right: 2rem
   @media only screen and (max-width: 767px)
     right: 10px
+
+.register-vote, .phonebank-now
+  border-radius: .25rem
+  padding: .3rem 1rem
+  margin-left: 1rem
+  cursor: pointer
+  background-color: #73308b
+  text-transform: uppercase
+  color: white
+  font-weight: bold
+  font-size: .9rem
+  
 
 .resources_alert
   position: fixed
