Adding VOTE BY banner

--- a/src/components/actionNetwork.sass
+++ b/src/components/actionNetwork.sass
@@ -34,10 +34,11 @@ html.can_embed-html
     display: flex
     width: 100%
     justify-content: center
-    background-color: $transparentPaper
+    background-color: #fafafa
     list-style: none
     padding: 0 2rem 2rem 2rem
     max-width: 330px
+    margin: auto
 
     // Hide things that should be hidden
         // Country selector
