--- a/src/components/Billboard.module.css
+++ b/src/components/Billboard.module.css
@@ -11,10 +11,10 @@
 }
 
 @media screen and (min-width: 768px) {
-  .hero--image {
-    min-height: 460px;
+  .hero-image {
     object-fit: cover;
     object-position: center;
+      min-height: 520px;
   }
 
   .action-network-section {
@@ -25,4 +25,14 @@
   }
 }
 
+.hero-image {
+  border-bottom: 10px solid #000;
+}
 
+@media screen and (max-width: 767px) {
+  .hero-image {
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+  }
+}
