--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -134,7 +134,15 @@ textarea
   @media only screen and (min-width: 768px)
     right: 2rem
   @media only screen and (max-width: 767px)
-    right: 10px
+    position: relative
+    top: 0
+    right: 0
+    width: 60%
+    margin: 0 auto
+
+.navbar-start
+  margin-right: 0
+  margin-left: auto
 
 .register-vote, .phonebank-now
   border-radius: .25rem
@@ -146,6 +154,10 @@ textarea
   color: white
   font-weight: bold
   font-size: .9rem
+  @media screen and (max-width:767px)
+    display: block
+    margin: 20px 0
+    text-align: center
   
 
 .resources_alert
@@ -321,9 +333,6 @@ p
     font-size: 2.5rem !important
     margin-top: 50px
 
-.navbar-start
-  margin-right: 0
-  margin-left: auto
 
 a
   color: $sky-blue
